<resources>
    <string name="app_name">SODE Calculator</string>
    <string name="title_home">Home</string>
    <string name="title_graph">Graph</string>
    <string name="title_report">Report</string>
    <string name="new_item">New item</string>
    <string name="title_functions">Functions</string>
    <string name="title_configure_values">Configure Values</string>
    <string name="enter_function_here">Enter differential function here</string>
    <string name="evaluate">Evaluate</string>
    <string name="next_section">Next Section</string>
    <string name="enter_constant_value_here">Enter constant value here</string>
    <string name="save_values">Save values</string>
</resources>