<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_function"
        android:icon="@drawable/ic_functions_black_24dp"
        android:title="@string/title_functions" />

    <item
        android:id="@+id/navigation_constants"
        android:icon="@drawable/ic_values_black_24dp"
        android:title="@string/title_configure_values" />

    <item
        android:id="@+id/navigation_graph"
        android:icon="@drawable/ic_graph_black_24dp"
        android:title="@string/title_graph" />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/ic_report_black_24dp"
        android:title="@string/title_report" />

</menu>