<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sode.calculator.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_function"
        android:name="com.sode.calculator.ui.functions.FunctionsFragment"
        android:label="@string/title_functions"
        tools:layout="@layout/fragment_functions" />

    <fragment
        android:id="@+id/navigation_constants"
        android:name="com.sode.calculator.ui.constants.ConstantsFragment"
        android:label="@string/title_configure_values"
        tools:layout="@layout/fragment_constants" />

    <fragment
        android:id="@+id/navigation_graph"
        android:name="com.sode.calculator.ui.graph.GraphFragment"
        android:label="@string/title_graph"
        tools:layout="@layout/fragment_graph" />

    <fragment
        android:id="@+id/navigation_report"
        android:name="com.sode.calculator.ui.report.ReportFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_report" />
</navigation>